--- a/credit.html
+++ b/credit.html
@@ -19,7 +19,7 @@
                         <a href="index.php"><h1><span>C</span>onsult <span>H</span>elp</h1></a>
                     </div>
                     <div class="brand" style="color:white;font-size:17px;position:relative;left:200px;">
-                        <!--Sesión iniciada como paciente.-->
+                        Sesión iniciada como paciente.
                     </div>
                     <div class="brand">
                         <a href="php/salir.php"><button style="width:110px;">Cerrar Sesion</button></a>
