--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
     <footer>
         <div id="footer">
             <br><br>
-            <h1>Consult Help</h1>
+            <h1>Consult Help inc.</h1>
             <div id="nosotros">
                 <div id="vision">
                     <b>Visión</b>
