--- a/footer.html
+++ b/footer.html
@@ -12,11 +12,11 @@
     <footer>
         <div id="footer">
             <br><br>
-            <h1>Consult Help inc.</h1>
+            <h1>Consult Help</h1>
             <div id="nosotros">
                 <div id="vision">
                     <b>Visión</b>
-                    <p>Construir la plataforma online mas efectiva y segura.</p>
+                    <p>Construir la plataforma online más efectiva y segura.</p>
                 </div>
                 <div id="mision">
                     <b>Misión</b>
@@ -39,7 +39,7 @@
             </div>
             <div id="copyright" align="center">
                 <p>
-                    COPYRIGHT © 2021 - Consult Help <br>
+                    COPYRIGHT © 2021 - Consult Help inc. <br>
                     |Todos los Derechos Reservados|
                 </p>
             </div>
