--- a/credit.html
+++ b/credit.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Consult Help - Creditos</title>
     </head>
-    <body>
+    <body style="background: white;">
 
         <section id="header">
             <div class="header container">
