--- a/credit.html
+++ b/credit.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/citas.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link href="https://chatcompose.azureedge.net/static/all/global/export/css/main.5b1bd1fd.css" rel="stylesheet">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Consult Help - Creditos</title>
@@ -144,4 +145,7 @@
         </footer>
 
     </body>
+
+    <script async type="text/javascript" src="https://chatcompose.azureedge.net/static/all/global/export/js/main.a7059cb5.js?user=JAL2310&lang=ES" user="JAL2310" lang="ES"></script>
+
 </html>
